--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,11 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+# TODO: cut out unnecessary (windows) features
 [dependencies]
 chrono = "0.4.34"
 colored = "2.1.0"
+notify-rust = "4.10.0"
 rodio = "0.17.3"
 serde = "1.0.197"
 serde_derive = "1.0.197"
