--- a/sampleconf.toml
+++ b/sampleconf.toml
@@ -1,6 +1,8 @@
 [General]
 sound = "assets/hyper-alarm.mp3"
-poll = 50
+poll = 100
+custom_app_name = "pwalarmd notifier"
+notify = true
 
 [[Alarm]]
 title = "Test alarm 1"
