--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.34"
 colored = "2.1.0"
+daemonize = "0.5.0"
+libc = "0.2.153"
 notify-rust = "4.10.0"
 rodio = "0.17.3"
 serde = "1.0.197"
