--- a/sampleconf.toml
+++ b/sampleconf.toml
@@ -1,9 +1,10 @@
 [General]
 sound = "../../assets/hyper-alarm.mp3"
-poll = 100
+poll = 50
 custom_app_name = "pwalarmd notifier"
 notify = true
 daemon = true
+tpfc = 4
 
 [[Alarm]]
 title = "Test alarm 1"
