--- a/pwalarmctl/Cargo.toml
+++ b/pwalarmctl/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap = { version = "4.5.1", features = ["derive"] }
+colored = "2.1.0"
+libc = "0.2.153"
+protobuf = "3.3.0"
